2011-06-27  Vladimir Serbinenko  <phcoder@gmail.com>

	* util/ieee1275/grub-ofpathname.c (main): Handle --help and --version
	so that help2man doesn't fail.

2011-06-27  Vladimir Serbinenko  <phcoder@gmail.com>

	* grub-core/net/drivers/ieee1275/ofnet.c (send_card_buffer) Use right
	type in pointers on sparc64.
	(get_card_packet): Likewise.

2011-06-27  Colin Watson  <cjwatson@ubuntu.com>

	* grub-core/commands/videoinfo.c (hook): Indicate current video mode
	with `*'.
	(grub_cmd_videoinfo): Fetch current video mode.

2011-06-27  Vladimir Serbinenko  <phcoder@gmail.com>

	* grub-core/disk/scsi.c (grub_scsi_read): Limit SCSI reads to 32K
	because of underlying system restrictions.

2011-06-27  Vladimir Serbinenko  <phcoder@gmail.com>

	* util/grub-mkrescue.in: Rename "ata" to "pata" and add ahci when
	necessary.

2011-06-27  Vladimir Serbinenko  <phcoder@gmail.com>

	Coreboot video support.

	* grub-core/Makefile.core.def (vga): Extend to coreboot and multiboot.
	(vbe): Likewise.
	* grub-core/kern/i386/coreboot/startup.S: Include int.S.
	* grub-core/kern/i386/pc/startup.S (grub_bios_interrupt): Moved from
	here ...
	* grub-core/kern/i386/int.S: ... here.
	* grub-core/video/i386/pc/vbe.c: Updated includes.
	* grub-core/video/i386/pc/vga.c: Likewise.
	* include/grub/i386/coreboot/memory.h
	(GRUB_MEMORY_MACHINE_SCRATCH_ADDR): New definition.
	(GRUB_MEMORY_MACHINE_SCRATCH_SEG): Likewise.
	(GRUB_MEMORY_MACHINE_SCRATCH_SIZE): Likewise.
	* include/grub/i386/pc/int.h (GRUB_CPU_INT_FLAGS_DEFAULT) [!PCBIOS]:
	Disable interrupts.
	* include/grub/i386/pc/vga.h: Removed. All users updated.

2011-06-27  Vladimir Serbinenko  <phcoder@gmail.com>

	* grub-core/disk/ahci.c (grub_ahci_readwrite_real): Use proper
	definitions for dprintf.
	* grub-core/disk/pata.c (grub_pata_readwrite): Likewise.

2011-06-27  Vladimir Serbinenko  <phcoder@gmail.com>

	* grub-core/net/drivers/ieee1275/ofnet.c (send_card_buffer): Fix
	prototype.
	(get_card_packet): Likewise.
